hphp/hack/test/package/package_access/illegal_cross_package_with_requirepackage_attr2.php
//// a.php
<?hh
// package pkg1

class A {
  <<__RequirePackage("pkg2")>>
  public function test() : void {
  }
}
function test(): void {
  $x = new A();
  $x->test(); // error
}
